--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
     "preview": "vite preview",
-    "predeploy": "npm run build"
+    "predeploy": "npm run build",
+    "prepare": "husky",
+    "prettier": "prettier --allow-empty --log-level warn --write '**/*.{ts,tsx,js,jsx,json,md}'"
   },
   "dependencies": {
     "@telegram-apps/react-router-integration": "^1.0.0",
@@ -36,9 +38,17 @@
     "eslint-plugin-react": "^7.34.1",
     "gh-pages": "^6.1.1",
     "globals": "^15.2.0",
+    "husky": "^9.1.5",
+    "lint-staged": "^15.2.10",
+    "prettier": "^3.3.3",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.8.0",
     "vite": "^5.2.11",
     "vite-tsconfig-paths": "^4.3.2"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "npm run prettier"
+    ]
   }
 }
